2019: pyliblo3 is forked from pylibo

  * Add the possibility to delete previous registered /methods
  * Modernize the setup.py to make it pip installable

2011-01-29: pyliblo 0.9.1

  * Changed send functions to raise an IOError if sending failed (probaby
    most useful with TCP connections).
  * Lots of code cleanup and deobfuscation.
  * Included unit tests in release tarball.

2010-10-22: pyliblo 0.9.0

  * Support Python 3.x. As a result, pyliblo can no longer be built with
    Pyrex, and requires Cython >= 0.12 instead.
  * Added free() method to Server and ServerThread classes.
  * Added fileno() method to Server and ServerThread classes (thanks to
    Edward George).
  * Prefer read-only properties over getter methods (which still exist, but
    are now deprecated).
  * Added proper docstrings (copied from the HTML docs).
  * The minimum version of liblo required by pyliblo is now 0.26.

2009-11-30: pyliblo 0.8.1

  * Release the Python GIL inside Server.recv().
  * Fixed a possible segfault when the error handler was called from the
  * liblo server thread.

2009-09-13: pyliblo 0.8.0

  * Changed license from GPL 2 to LGPL 2.1 (as did liblo in version 0.26).
  * Added protocol parameter to the Server class. Among other things, this
    allows TCP connections.
  * The minumum version of liblo required by pyliblo is now 0.24.
  * pyliblo can now be built with either Pyrex or Cython.

2009-01-19: pyliblo 0.7.2

  * Fixed all compiler warnings properly in Pyrex, without patching the
    generated C code.
  * Return values of callback functions are no longer ignored, but handled
    as in liblo.
  * The send_osc script can now be run with an explicit type string,
    instead of trying to determine the argument types automatically.

2008-08-03: pyliblo 0.7.1

  * Added manpages for send_osc and dump_osc.

2008-03-03: pyliblo 0.7.0

  * Fixed memory leaks, caused by failure to free() the result of
    lo_server_get_url() and lo_address_get_url().