@@ -1,0 +1,16 @@
+#!/bin/bash
+
+sudo systemctl start docker
+    
+# for plat in manylinux1_x86_64 manylinux2010_x86_64 ; do
+for plat in manylinux2010_x86_64; do
+    docker_img="quay.io/pypa/$plat"
+    sudo docker pull "$docker_img"
+    sudo docker run --rm -e PLAT=$plat -v `pwd`:/io "$docker_img" /io/docker/build-wheels.sh
+    ls wheelhouse/
+done
+
+twine upload --skip-existing wheelhouse/pyliblo*.whl
+
+echo "Para subir los wheels: "
+echo "twine upload wheelhouse/*"
